# newpapers-boy

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  RELEASE_CHECKLIST.md  RUNTIME_ADAPTERS.md  SECURITY.md  TECH_REPORT.md  config.md  dispatch.config.json  dispatch.config.schema.json  pyproject.toml  requirements.in  requirements.lock.txt  requirements.txt  run_daily.py  setup.ps1  setup.sh
.github/workflows/: ci.yml  daily-dispatch.yml  deliver-dispatch.yml  prepare-dispatch.yml
docs/: CONFIGURATION.md  DEPLOYMENT.md  OPERATIONS.md
docs/releases/: v0.1.0.md
examples/: sample-dispatch.md
scripts/: __init__.py  artifact_contract.py  configure_real_schedule.py  content_history.py  deliver_ready.py  dispatch_config.py  dispatch_markdown.py  dispatch_paths.py  env_utils.py  finalize_dispatch.py  migrate_config.py  openai_dispatch_agent.py  postprocess.ps1  project_doctor.py  push_email.py  run_agent_command.py  run_events.py  setup_github_actions.ps1  tts_generate.py  validate_config.py  validate_dispatch.py
tests/: test_agent_runner.py  test_dispatch_contract.py  test_email_rendering.py  test_openai_dispatch_agent.py  test_portable_core.py  test_project_doctor.py  test_setup_script_contract.py  test_v01_contracts.py  test_workflow_contract.py
tests/fixtures/: fake_agent.py
